<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.checkout.CheckoutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.BruntWork.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/checkout_title" />

            <TextView
                style="@style/Widget.BruntWork.Title.Mini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/et_title_name" />

            <EditText
                android:id="@+id/checkout_name"
                style="@style/Widget.BruntWork.EditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ."
                android:hint="@string/et_hint_name"
                android:padding="20dp" />

            <TextView
                style="@style/Widget.BruntWork.Title.Mini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/et_title_email" />

            <EditText
                android:id="@+id/checkout_email"
                style="@style/Widget.BruntWork.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:hint="@string/et_hint_email"
                android:padding="20dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/checkout_terms_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:thumb="@drawable/donut"
                    app:track="@drawable/switch_track" />

                <TextView
                    style="@style/Widget.BruntWork.Title.Mini"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="13dp"
                    android:layout_toRightOf="@+id/checkout_terms_switch"
                    android:text="@string/checkout_terms_message" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkout_button"
                style="@style/Widget.BruntWork.Button.Pay"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="Pay $350" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>