<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.products.ProductsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.BruntWork.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/products_title" />

            <HorizontalScrollView
                android:id="@+id/chip_scroll_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_all"
                        style="@style/Widget.BruntWork.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/products_category_all" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_jackets"
                        style="@style/Widget.BruntWork.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/products_category_jackets" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_blazers"
                        style="@style/Widget.BruntWork.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/products_category_blazers" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_tees"
                        style="@style/Widget.BruntWork.Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/products_category_tees" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_product" />
    </LinearLayout>


</FrameLayout>